compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__todo__as_expression.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/todo.rs
assertion_line: 51
expression: "\npub fn go(f) {\n  let boop = todo as \"I should do this\"\n  f(todo as \"Boom\")\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(f) {
  let boop = todo as "I should do this"
  f(todo as "Boom")
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(f) {
  let _block;
  throw makeError("todo", FILEPATH, "my/mod", 3, "go", "I should do this", {})
  let boop = _block;
  return f(
    (() => {
      throw makeError("todo", FILEPATH, "my/mod", 4, "go", "Boom", {})
    })(),
  );
}
